Work in progress to refactor the way search coprocessors work