@@ -1,5 +1,6 @@
 package stroom.search.impl;
 
+import stroom.dashboard.expression.v1.FieldIndex;
 import stroom.dashboard.expression.v1.Generator;
 import stroom.dashboard.expression.v1.GroupKey;
 import stroom.dashboard.expression.v1.StaticValueFunction;
@@ -9,7 +10,6 @@ import stroom.docref.DocRef;
 import stroom.index.shared.AnalyzerType;
 import stroom.index.shared.IndexField;
 import stroom.index.shared.IndexFields;
-import stroom.mapreduce.v2.UnsafePairQueue;
 import stroom.query.api.v2.DateTimeFormat;
 import stroom.query.api.v2.ExpressionOperator;
 import stroom.query.api.v2.ExpressionTerm.Condition;
@@ -23,24 +23,26 @@ import stroom.query.api.v2.Sort.SortDirection;
 import stroom.query.api.v2.TableSettings;
 import stroom.query.api.v2.TimeZone;
 import stroom.query.api.v2.TimeZone.Use;
+import stroom.query.common.v2.CompiledFields;
+import stroom.query.common.v2.CoprocessorKey;
 import stroom.query.common.v2.CoprocessorSettings;
-import stroom.query.common.v2.CoprocessorSettingsMap.CoprocessorKey;
 import stroom.query.common.v2.Item;
+import stroom.query.common.v2.NodeResult;
 import stroom.query.common.v2.Payload;
 import stroom.query.common.v2.TableCoprocessorSettings;
 import stroom.query.common.v2.TablePayload;
-import stroom.search.resultsender.NodeResult;
+import stroom.query.common.v2.TablePayloadSerialiser;
+import stroom.task.shared.TaskId;
 
 import com.caucho.hessian.io.Hessian2Output;
 import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.UUID;
 
 class TestHessian {
@@ -81,17 +83,16 @@ class TestHessian {
                 Arrays.asList(1, 2, 3),
                 true);
         final CoprocessorKey coprocessorKey = new CoprocessorKey(100, new String[]{"c1, c2"});
-        final CoprocessorSettings coprocessorSettings = new TableCoprocessorSettings(tableSettings);
-        final Map<CoprocessorKey, CoprocessorSettings> coprocessorMap = new HashMap<>();
-        coprocessorMap.put(coprocessorKey, coprocessorSettings);
+        final CoprocessorSettings coprocessorSettings = new TableCoprocessorSettings(coprocessorKey, tableSettings);
 
         final ClusterSearchTask clusterSearchTask = new ClusterSearchTask(
+                new TaskId("test", null),
                 "test",
                 key,
                 query,
                 Arrays.asList(1L, 2L, 3L),
                 fields,
-                coprocessorMap,
+                Collections.singletonList(coprocessorSettings),
                 "locale",
                 1000);
 
@@ -105,16 +106,23 @@ class TestHessian {
     @Test
     void testNodeResult() throws IOException {
         final GroupKey key = new GroupKey(0, null, new Val[]{ValString.create("test")});
-        final UnsafePairQueue<GroupKey, Item> pairQueue = new UnsafePairQueue<>();
-        pairQueue.collect(key, new Item(key, new Generator[]{getGenerator("v1"), getGenerator("v2")}, 0));
-        pairQueue.collect(key, new Item(key, new Generator[]{getGenerator("v4"), getGenerator("v6")}, 0));
-        pairQueue.collect(key, new Item(key, new Generator[]{getGenerator("v7"), getGenerator("v8")}, 0));
-        final CoprocessorKey coprocessorKey = new CoprocessorKey(100, new String[]{"c1, c2"});
-        final TablePayload tablePayload = new TablePayload(pairQueue);
-        final Map<CoprocessorKey, Payload> payloadMap = new HashMap<>();
-        payloadMap.put(coprocessorKey, tablePayload);
+        final List<Item> itemList = new ArrayList<>();
+        itemList.add(new Item(key, new Generator[]{getGenerator("v1"), getGenerator("v2")}, 0));
+        itemList.add(new Item(key, new Generator[]{getGenerator("v4"), getGenerator("v6")}, 0));
+        itemList.add(new Item(key, new Generator[]{getGenerator("v7"), getGenerator("v8")}, 0));
 
-        final NodeResult nodeResult = new NodeResult(payloadMap, Collections.singletonList("test"), true);
+        final List<Field> fields = List.of(new Field.Builder().name("f1").build(), new Field.Builder().name("f2").build());
+        final CompiledFields compiledFields = new CompiledFields(fields, new FieldIndex(), Collections.emptyMap());
+        final TablePayloadSerialiser tablePayloadSerialiser = new TablePayloadSerialiser(compiledFields);
+        final Item[] itemsArray = itemList.toArray(new Item[0]);
+        final byte[] data = tablePayloadSerialiser.fromQueue(itemsArray);
+
+        final CoprocessorKey coprocessorKey = new CoprocessorKey(100, new String[]{"c1, c2"});
+        final TablePayload tablePayload = new TablePayload(coprocessorKey, data);
+        final List<Payload> payloads = new ArrayList<>();
+        payloads.add(tablePayload);
+
+        final NodeResult nodeResult = new NodeResult(payloads, Collections.singletonList("test"), true);
 
         ByteArrayOutputStream baos = new ByteArrayOutputStream();
         Hessian2Output out = new Hessian2Output(baos);
